; ModuleID = '/home/carl/AnghaBench/mjolnir/Mjolnir/lua/extr_lgc.c_sweeplist.c'
source_filename = "/home/carl/AnghaBench/mjolnir/Mjolnir/lua/extr_lgc.c_sweeplist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, %struct.TYPE_5__* }

@maskcolors = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_5__** (i32*, %struct.TYPE_5__**, i32)* @sweeplist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_5__** @sweeplist(i32* %0, %struct.TYPE_5__** %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_5__**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_5__*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_5__** %1, %struct.TYPE_5__*** %5, align 8
  store i32 %2, i32* %6, align 4
  %12 = load i32*, i32** %4, align 8
  %13 = call i32* @G(i32* %12)
  store i32* %13, i32** %7, align 8
  %14 = load i32*, i32** %7, align 8
  %15 = call i32 @otherwhite(i32* %14)
  store i32 %15, i32* %8, align 4
  %16 = load i32*, i32** %7, align 8
  %17 = call i32 @luaC_white(i32* %16)
  store i32 %17, i32* %9, align 4
  br label %18

18:                                               ; preds = %57, %3
  %19 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %5, align 8
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %19, align 8
  %21 = icmp ne %struct.TYPE_5__* %20, null
  br i1 %21, label %22, label %26

22:                                               ; preds = %18
  %23 = load i32, i32* %6, align 4
  %24 = add nsw i32 %23, -1
  store i32 %24, i32* %6, align 4
  %25 = icmp sgt i32 %23, 0
  br label %26

26:                                               ; preds = %22, %18
  %27 = phi i1 [ false, %18 ], [ %25, %22 ]
  br i1 %27, label %28, label %58

28:                                               ; preds = %26
  %29 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %5, align 8
  %30 = load %struct.TYPE_5__*, %struct.TYPE_5__** %29, align 8
  store %struct.TYPE_5__* %30, %struct.TYPE_5__** %10, align 8
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  store i32 %33, i32* %11, align 4
  %34 = load i32, i32* %8, align 4
  %35 = load i32, i32* %11, align 4
  %36 = call i64 @isdeadm(i32 %34, i32 %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %46

38:                                               ; preds = %28
  %39 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %40 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %39, i32 0, i32 1
  %41 = load %struct.TYPE_5__*, %struct.TYPE_5__** %40, align 8
  %42 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %5, align 8
  store %struct.TYPE_5__* %41, %struct.TYPE_5__** %42, align 8
  %43 = load i32*, i32** %4, align 8
  %44 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %45 = call i32 @freeobj(i32* %43, %struct.TYPE_5__* %44)
  br label %57

46:                                               ; preds = %28
  %47 = load i32, i32* %11, align 4
  %48 = load i32, i32* @maskcolors, align 4
  %49 = and i32 %47, %48
  %50 = load i32, i32* %9, align 4
  %51 = or i32 %49, %50
  %52 = call i32 @cast_byte(i32 %51)
  %53 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %54 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %53, i32 0, i32 0
  store i32 %52, i32* %54, align 8
  %55 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %56 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %55, i32 0, i32 1
  store %struct.TYPE_5__** %56, %struct.TYPE_5__*** %5, align 8
  br label %57

57:                                               ; preds = %46, %38
  br label %18

58:                                               ; preds = %26
  %59 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %5, align 8
  %60 = load %struct.TYPE_5__*, %struct.TYPE_5__** %59, align 8
  %61 = icmp eq %struct.TYPE_5__* %60, null
  br i1 %61, label %62, label %63

62:                                               ; preds = %58
  br label %65

63:                                               ; preds = %58
  %64 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %5, align 8
  br label %65

65:                                               ; preds = %63, %62
  %66 = phi %struct.TYPE_5__** [ null, %62 ], [ %64, %63 ]
  ret %struct.TYPE_5__** %66
}

declare dso_local i32* @G(i32*) #1

declare dso_local i32 @otherwhite(i32*) #1

declare dso_local i32 @luaC_white(i32*) #1

declare dso_local i64 @isdeadm(i32, i32) #1

declare dso_local i32 @freeobj(i32*, %struct.TYPE_5__*) #1

declare dso_local i32 @cast_byte(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
